# Tasks

./: .gitignore
C++/Algorithmic problems/olymp.am/QuestionMarks/: CMakeLists.txt  main.cpp
C++/Algorithmic problems/olymp.am/cipher/: CMakeLists.txt  main.cpp
C++/Algorithmic problems/simple/NearestNumberWithoutRepetitions/: CMakeLists.txt  main.cpp
C++/Task001/: CMakeLists.txt
C++/Task001/src/: ClassRoom.cpp  ClassRoom.h  Mark.cpp  Mark.h  Student.cpp  Student.h  main.cpp
C++/Task001/src/Containers/: ListIteratorTemplated.h  SimpleList.h
C++/Task001/tests/: CMakeLists.txt  SimpleListTest.cpp  main.cpp
Java/CodeFights/: build.gradle  settings.gradle
Java/CodeFights/gradle/wrapper/: gradle-wrapper.properties
Java/Regex/: build.gradle
Java/Regex/gradle/wrapper/: gradle-wrapper.properties
JavaScript/React/album-viewer/: package-lock.json  package.json
JavaScript/React/album-viewer/public/: index.html
JavaScript/React/album-viewer/src/: index.css  index.js
JavaScript/React/local-shortening-service/: package-lock.json  package.json
JavaScript/React/local-shortening-service/public/: index.html
JavaScript/React/local-shortening-service/src/: index.css  index.js
JavaScript/React/posts-users-list/: package-lock.json  package.json
JavaScript/React/posts-users-list/src/: index.js
Rust/ipv4/: Cargo.toml
Rust/ipv4/src/: main.rs
Rust/nth-benchmark/: Cargo.toml
Rust/nth-benchmark/benches/: bench.rs
Rust/stm32f103-fakekeyboard/firmware/: Cargo.toml  build.rs  make.sh  payload.txt
Rust/stm32f103-fakekeyboard/firmware/src/: main.rs
(+121 files in other folders)
