[package]
name = "firmware"
version = "0.1.0"
authors = ["Gevorg Hindoyan <nubo8@protonmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
stm32f1xx-hal = { version = "0.5", features = ["stm32f103", "stm32-usbd", "rt"] }
panic-halt = "*"
usb-device = "0.2.4"
embedded-hal = "0.2.3"
cortex-m-rtfm = "0.5.1"
alloc-cortex-m = "0.4.0"
library = {path = "../library"}

[build-dependencies]
library = {path = "../library"}

[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
overflow-checks = false
codegen-units = 1